# C2PluginLoader

./: C2PluginLoader.sln  CMakeLists.txt  CMakePresets.json
C2PluginLoader/: C2PluginLoader.vcxproj  main.cpp
src/: main.cpp
